<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_utility_board_interface</name>
  <version>2.0.0</version>
  <description>RUBI - a lightweight single-window ROS 2 control board: live topic
    rates, bandwidth, delays, QoS mismatch detection, health watchdog, message
    inspector, /rosout logs, parameters, lifecycle control, TF health,
    service/action caller, bag recording, graph snapshot/diff and exports.</description>

  <maintainer email="a.pahlevani1998@gmail.com">Ali Pahlevani</maintainer>
  <license>MIT</license>
  <url type="website">https://www.SLAMbotics.org</url>
  <url type="repository">https://github.com/ali-pahlevani/ROS_Utility_Board_Interface</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <!-- dearpygui has no rosdep key: install with `pip install dearpygui` -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
